Delay tray setup until mainwindow state restored

Otherwise the the KSNI appears to lose track of the main window.

BUG: 482316